--- a/商品頁_黑餅乾.html
+++ b/商品頁_黑餅乾.html
@@ -6,44 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Product Page</title>
     <style>
-        .tyContainer {
-            border: 2px solid white;
-            width: 100px;
+        #tyModal {
+            display: none;
             position: fixed;
             z-index: 1;
-        }
-
-        .tyLeftSide {
+            padding-top: 100px;
             left: 0;
-            top: 10vh;
-        }
-
-        .tyContainer div {
-            border: 1px solid white;
-            color: white;
-            background-color: black;
+            top: 0;
             width: 100%;
-            height: 80px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
         }
 
-        .tyContainer a div:hover {
-            background-color: #f44336;
+        .tyModalContent {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
         }
 
-        .tyContainer a {
-            text-decoration: none;
+        .tyClose {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
         }
 
-        .tyContainer .tyTitle {
-            background-color: gray;
-            height: 50px;
+        .tyClose:hover,
+        .tyClose:focus {
+            color: #000;
+            cursor: pointer;
         }
-
-
-
 
         body {
             font-family: Arial, sans-serif;
@@ -252,20 +247,13 @@
 </head>
 
 <body>
-    <div class="tyContainer tyLeftSide">
-        <div class="tyTitle">快速查詢</div>
-        <a href="#">
-            <div>機票資訊</div>
-        </a>
-        <a href="#">
-            <div>訂房資訊</div>
-        </a>
-        <a href="#">
-            <div>租車資訊</div>
-        </a>
+    <div id="tyModal">
+        <div class="tyModalContent">
+            <span class="tyClose">&times;</span>
+            <h1>好康報報</h1>
+            <p>優惠資訊</p>
+        </div>
     </div>
-
-
 
     <header>
         <a href="首頁.html">
@@ -457,6 +445,17 @@
             </div>
         </div>
     </footer>
+
+    var modalElem = document.getElementById("tyModal");
+    var spanElem = document.getElementsByClassName("tyClose")[0];
+
+    spanElem.onclick = function () {
+    modalElem.style.display = "none";
+    }
+
+    setTimeout(function () {
+    modalElem.style.display = "block";
+    }, 1000);
 </body>
 
 </html>
